solved / programmers / lv3 / 베스트앨범 / 20230207화

--- a/01 프로그래머스/02_프로그래머스_고득점kit_해시.ipynb
+++ b/01 프로그래머스/02_프로그래머스_고득점kit_해시.ipynb
@@ -360,6 +360,7 @@
    "cell_type": "markdown",
    "id": "7d542377-a852-4fd8-907d-22e163d08e7c",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -593,19 +594,123 @@
     "tags": []
    },
    "source": [
-    "### 4. 위장\n",
+    "### 4. 베스트앨범\n",
     "\n",
-    "- level 2\n",
-    "- 2023.02.06.월\n",
-    "- 시작 14:00\n",
-    "- 끝 15:08\n",
-    "- **실패 : 시간초과**\n",
+    "- level 3\n",
+    "- 2023.02.07.화\n",
+    "- 시작 14:02\n",
+    "- 끝 15:14\n",
+    "- 성공\n",
     "- 핵심\n",
-    "    - 1) 조합을 이용해서 풀면 시간초과가 난다.\n",
-    "    - 2) 다항식의 계수 값을 구하는 것과 같음. n차식(n= 옷의 종류의 개수) 계수들의 합임.\n",
-    "    - ex) x^3 + (a+b+c)x^2 + (ab+bc+ca)x + (abc) ==> (x+a)(x+b)(x+c).\n",
-    "    - 여기서 x=1 하고, x^3의 계수는 정답에 포함되지 않으므로 마지막에 -1.\n",
-    "    - **해시 문제를 가장한 수학 문제가 아닌가..! (내 생각)**"
+    "    1) 장르마다 노래 고유번호와 재생된 수를 dict에 기록\n",
+    "    2) 먼저, 장르 내에서 정렬 수행\n",
+    "    3) 이후, 장르끼리의 정렬 수행"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "cf6e8e2e-ceab-4bb0-83f5-ec15b8cc0186",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(genres, plays):\n",
+    "    \n",
+    "    song = dict()\n",
+    "    \n",
+    "    for idx,(g,p) in enumerate(zip(genres,plays)):\n",
+    "        if g not in song.keys():\n",
+    "            song[g] = [[p,idx]]\n",
+    "        else:\n",
+    "            song[g].append([p,idx])\n",
+    "    \n",
+    "    answer = []\n",
+    "    \n",
+    "    for g,p in song.items():\n",
+    "        sum_p = sum([i for i,j in p])\n",
+    "        answer.append([sum_p, sorted(p, key=lambda x:(-x[0],x[1]))[:2]])\n",
+    "    \n",
+    "    answer.sort(key = lambda x:-x[0])\n",
+    "    answer = [d for a,b in answer for c,d in b]\n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "76b6f178-a5d1-4101-a9fa-53d9967f809c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(genres, plays):\n",
+    "    \n",
+    "    # 1) 장르마다 노래 고유번호와 재생된 수를 dict에 기록함\n",
+    "    song = dict()\n",
+    "    \n",
+    "    for idx,(g,p) in enumerate(zip(genres,plays)):\n",
+    "        if g not in song.keys():\n",
+    "            song[g] = [[p,idx]]\n",
+    "        else:\n",
+    "            song[g].append([p,idx])\n",
+    "    \n",
+    "    # 2) 장르 내에서 정렬 수행 + 장르끼리의 정렬을 위해 sum(plays) 값 사용\n",
+    "    answer = []\n",
+    "    \n",
+    "    for g,p in song.items():\n",
+    "        sum_p = sum([i for i,j in p])\n",
+    "        answer.append([sum_p, sorted(p, key=lambda x:(-x[0],x[1]))[:2]])\n",
+    "    \n",
+    "    # 3) 장르끼리의 정렬 수행\n",
+    "    answer.sort(key = lambda x:-x[0])\n",
+    "    answer = [d for a,b in answer for c,d in b]\n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f6565635-04e4-4806-bac0-e3d60935cdec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 1, 3, 0]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genres = [\"classic\", \"pop\", \"classic\", \"classic\", \"pop\"]\n",
+    "plays = [500, 600, 150, 800, 2500]\n",
+    "# result = [4, 1, 3, 0]\n",
+    "\n",
+    "solution(genres, plays)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33a04a8e-9ecd-42dc-8c0c-959eae76e50f",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 4. 베스트앨범\n",
+    "\n",
+    "- level 3\n",
+    "- 2023.02.07.화\n",
+    "- 시작 14:02\n",
+    "- 끝 15:14\n",
+    "- 성공\n",
+    "- 핵심\n",
+    "    1) 장르마다 노래 고유번호와 재생된 수를 dict에 기록\n",
+    "    2) 먼저, 장르 내에서 정렬 수행\n",
+    "    3) 이후, 장르끼리의 정렬 수행"
    ]
   }
  ],
