solved / lv2 / h-index / 20230324금

--- a/01 프로그래머스/05_프로그래머스_고득점kit_정렬.ipynb
+++ b/01 프로그래머스/05_프로그래머스_고득점kit_정렬.ipynb
@@ -69,6 +69,7 @@
    "cell_type": "markdown",
    "id": "428aabd4-c067-4648-8380-5d88975af6c6",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -280,9 +281,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "05ce7f40-1253-4ede-8957-6431754080d1",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 3. H-Index\n",
+    "\n",
+    "- https://school.programmers.co.kr/learn/courses/30/lessons/42747\n",
+    "- level 2\n",
+    "- 2023.03.24.금\n",
+    "- 시작 22:45\n",
+    "- 끝 23:35\n",
+    "- 핵심\n",
+    "    - 문제 제대로 해석하고 이해하기..\n",
+    "    - [7000, 7000, 7000, 7000, 3] => 답 : 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "284e4fa0-7456-48bb-909e-a0aa9ee041d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(citations):\n",
+    "    \n",
+    "    citations = sorted(citations, reverse=True)\n",
+    "    \n",
+    "    for idx,value in enumerate(citations):\n",
+    "        if value <= idx:\n",
+    "            return idx\n",
+    "        \n",
+    "    return len(citations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "5759b58e-4bb1-44fa-a7a9-2fbb736070fd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "citations = [3, 0, 6, 1, 5, 3, 3, 6, 6, 6]\n",
+    "# result = 5\n",
+    "\n",
+    "solution(citations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "422e7d22-4c18-4b8f-b399-0c986750b5c1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "citations = [3, 0, 6, 1, 5]\n",
+    "# result = 3\n",
+    "\n",
+    "solution(citations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "36c1c283-c573-4775-a115-a48d63575c84",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "citations = [6, 6, 6, 5, 3, 1, 0]\n",
+    "# result = 4\n",
+    "\n",
+    "solution(citations)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "284e4fa0-7456-48bb-909e-a0aa9ee041d3",
+   "id": "af9c4d1a-45d1-485d-9eb7-3e3be0757aac",
    "metadata": {},
    "outputs": [],
    "source": []
