solved / lv 2 / 큰수 만들기, 구명보트 / 20230330목

--- a/01 프로그래머스/06_프로그래머스_고득점kit_탐욕법.ipynb
+++ b/01 프로그래머스/06_프로그래머스_고득점kit_탐욕법.ipynb
@@ -216,6 +216,7 @@
    "cell_type": "markdown",
    "id": "79e0663e-51e9-4f47-aebb-247e1dbca833",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -524,12 +525,436 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "75ad779f-1d74-45b9-bd11-49c7820b2732",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 3. 큰 수 만들기\n",
+    "\n",
+    "- https://school.programmers.co.kr/learn/courses/30/lessons/42883\n",
+    "- level 2\n",
+    "- 2023.03.29.수\n",
+    "- 시작 18:07"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "id": "d07adda3-ac26-4f3b-a995-74c19709f551",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "### 시간초과\n",
+    "\n",
+    "from itertools import combinations\n",
+    "\n",
+    "def solution(number, k):\n",
+    "\n",
+    "    combi = list(combinations(number, len(number)-k))\n",
+    "    #print(combi)\n",
+    "    #print(list(map(lambda x: ''.join(x), combi)))\n",
+    "    \n",
+    "    answer = list(map(lambda x: ''.join(x), combi))\n",
+    "        \n",
+    "    return max(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "7efdf921-9d7d-4703-8ee5-4a27ef49cad6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "### 10번 케이스 시간초과\n",
+    "\n",
+    "def solution(number, k):\n",
+    "    \n",
+    "    answer = ''\n",
+    "    \n",
+    "    first_num = max(number[:k+1])\n",
+    "    answer += first_num\n",
+    "    idx = number[:k+1].index(first_num)\n",
+    "    \n",
+    "    for i in range(len(number)-k-1):\n",
+    "        if len(number)-k-i-2 == 0:\n",
+    "            choice = max(number[idx+1:])\n",
+    "            idx += number[idx+1:].index(choice) + 1\n",
+    "        else:\n",
+    "            choice = max(number[idx+1:-(len(number)-k-i-2)])\n",
+    "            idx += number[idx+1:-(len(number)-k-i-2)].index(choice) + 1\n",
+    "        answer += choice\n",
+    "        \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "73439c60-05df-4455-adaf-38f01aa2114b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "### 런타임 에러\n",
+    "\n",
+    "def solution(number, k):\n",
+    "    \n",
+    "    answer = ''\n",
+    "    \n",
+    "    first_num = max(number[:k+1])\n",
+    "    answer += first_num\n",
+    "    idx = number[:k+1].index(first_num)\n",
+    "    \n",
+    "    for i in range(len(number)-k-1):\n",
+    "        if len(number)-k-i-2 == 0:\n",
+    "            if '9' in number[idx+1:]:\n",
+    "                choice = '9'\n",
+    "            else:\n",
+    "                choice = max(number[idx+1:])\n",
+    "            idx += number[idx+1:].index(choice) + 1\n",
+    "        else:\n",
+    "            if '9' in number[idx+1:]:\n",
+    "                choice = '9'\n",
+    "            else:\n",
+    "                choice = max(number[idx+1:-(len(number)-k-i-2)])\n",
+    "            idx += number[idx+1:-(len(number)-k-i-2)].index(choice) + 1\n",
+    "        answer += choice\n",
+    "        \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "c9c01318-8207-421b-87b9-c978a9f75990",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "### 성공\n",
+    "\n",
+    "def solution(number, k):\n",
+    "    \n",
+    "    answer = ''\n",
+    "    \n",
+    "    first_num = max(number[:k+1])\n",
+    "    answer += first_num\n",
+    "    idx = number[:k+1].index(first_num)\n",
+    "    \n",
+    "    for i in range(len(number)-k-1):\n",
+    "        \n",
+    "        if len(number)-k-i-2 == 0:\n",
+    "            for num in range(9,-1,-1):\n",
+    "                if str(num) in number[idx+1:]:\n",
+    "                    choice = str(num)\n",
+    "                    break\n",
+    "            idx += number[idx+1:].index(choice) + 1\n",
+    "            \n",
+    "        else:\n",
+    "            for num in range(9,-1,-1):\n",
+    "                if str(num) in number[idx+1:-(len(number)-k-i-2)]:\n",
+    "                    choice = str(num)\n",
+    "                    break\n",
+    "            idx += number[idx+1:-(len(number)-k-i-2)].index(choice) + 1\n",
+    "            \n",
+    "        answer += choice\n",
+    "        \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "29ca02b0-8c18-41f8-a50e-1d47d378e570",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'94'"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number = '1924'\n",
+    "k = 2\n",
+    "\n",
+    "solution(number, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "6edbbf77-37e1-4a54-bcef-6f1d47bf1cfb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3234'"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number = '1231234'\n",
+    "k = 3\n",
+    "\n",
+    "solution(number, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "9bac9aa2-95a2-449d-8824-9de0afe08aad",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'775841'"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number = '4177252841'\n",
+    "k = 4\n",
+    "\n",
+    "solution(number, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "5b2b2641-0f8a-4906-ae86-b911ebf65e44",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "### 타인코드. 모범답안\n",
+    "# https://wellsw.tistory.com/m/205\n",
+    "\n",
+    "def solution(number, k):\n",
+    "    stack = []\n",
+    "    for n in number:\n",
+    "        while stack and stack[-1] < n and k > 0:\n",
+    "            stack.pop()\n",
+    "            k -= 1\n",
+    "        stack.append(n)\n",
+    "\n",
+    "    # 아직 제거되지 못 한 숫자를 뒤에서 삭제\n",
+    "    if k > 0:\n",
+    "        stack = stack[:-k]\n",
+    "\n",
+    "    return ''.join(stack)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b40d46e-b047-470c-9e9c-60a03d95f02f",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 4. 구명보트\n",
+    "\n",
+    "- https://school.programmers.co.kr/learn/courses/30/lessons/42885\n",
+    "- level 2\n",
+    "- 2023.03.30.목\n",
+    "- 시작 11:50\n",
+    "- 끝 12:48\n",
+    "- 실패\n",
+    "    - 시간초과 + 1,4,5 못 맞춤\n",
+    "- 재도전\n",
+    "- 시작 12:55\n",
+    "- 끝 13:11\n",
+    "- 성공\n",
+    "    - 문제를 제대로 읽었어야 했음\n",
+    "    - **구명보트는 작아서 한 번에 최대 2명씩 밖에 탈 수 없다!**\n",
+    "    - 제일 큰 사람과 제일 작은 사람을 하나씩 비교하면 됨 (쉬움)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "fb08fffb-7c5c-4745-ad83-c7fb150f17e1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### 실패\n",
+    "# 정확성) 1,4,5 실패\n",
+    "# 효율성) 다 시간초과\n",
+    "\n",
+    "def solution(people, limit):\n",
+    "    \n",
+    "    answer = 0\n",
+    "    stack = 0\n",
+    "    people.sort(reverse=True)\n",
+    "    i = 0\n",
+    "    \n",
+    "    while people or stack:\n",
+    "        if stack == 0:\n",
+    "            stack += people.pop(0)\n",
+    "        else:\n",
+    "            if people:\n",
+    "                if people[i] + stack > limit:\n",
+    "                    i += 1\n",
+    "                elif people[i] + stack < limit:\n",
+    "                    stack += people.pop(i)\n",
+    "                else:\n",
+    "                    people.pop(i)\n",
+    "                    answer += 1\n",
+    "                    stack = 0\n",
+    "                    i = 0\n",
+    "            if i > len(people)-1 and stack != 0:\n",
+    "                answer += 1\n",
+    "                stack = 0\n",
+    "                i = 0\n",
+    "                \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a41907d0-e9c0-427f-a734-1a2707aeeddb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "def solution(people, limit):\n",
+    "    \n",
+    "    people.sort(reverse=True)\n",
+    "    people = deque(people)\n",
+    "    big = 0\n",
+    "    answer = 0\n",
+    "    \n",
+    "    while people:\n",
+    "        if big == 0:\n",
+    "            big = people.popleft()\n",
+    "            if not people:\n",
+    "                answer += 1\n",
+    "        else:\n",
+    "            small = people.pop()\n",
+    "            if big + small <= limit:\n",
+    "                answer += 1\n",
+    "                big = 0\n",
+    "            else:\n",
+    "                people.append(small)\n",
+    "                answer += 1\n",
+    "                big = 0\n",
+    "                \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "97539909-a18a-42f2-8b49-e3f75600684f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "people = [70, 50, 80, 50]\n",
+    "limit = 100\n",
+    "#result = 3\n",
+    "\n",
+    "solution(people, limit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "83681ccf-8ab0-435f-9dd1-1026c957414a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "people = [70, 80, 50]\n",
+    "limit = 100\n",
+    "#result = 3\n",
+    "\n",
+    "solution(people, limit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6de4698c-4d2f-4f76-a6ed-933dc3745fa4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 모범답안\n",
+    "# https://velog.io/@sem/프로그래머스-LEVEL2-구명보트-Python\n",
+    "\n",
+    "def solution(people, limit) :\n",
+    "    answer = 0\n",
+    "    people.sort()\n",
+    "\n",
+    "    a = 0\n",
+    "    b = len(people) - 1\n",
+    "    while a < b :\n",
+    "        if people[b] + people[a] <= limit :\n",
+    "            a += 1\n",
+    "            answer += 1\n",
+    "        b -= 1\n",
+    "    return len(people) - answer"
+   ]
   }
  ],
  "metadata": {
