solved / lv3 / 네트워크 / 20230412수

--- a/01 프로그래머스/08_프로그래머스_고득점kit_DFSBFS.ipynb
+++ b/01 프로그래머스/08_프로그래머스_고득점kit_DFSBFS.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "id": "d0aa25b5-25b5-405b-985b-20fe904e646b",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -190,13 +191,186 @@
     "tags": []
    },
    "source": [
-    "### 1. 타겟 넘버\n",
+    "### 2. 네트워크\n",
     "\n",
-    "- https://school.programmers.co.kr/learn/courses/30/lessons/43165\n",
-    "- level 2\n",
-    "- 2023.04.01.토\n",
-    "- 시작 14:12\n",
-    "- 끝 14:55"
+    "- https://school.programmers.co.kr/learn/courses/30/lessons/43162\n",
+    "- level 3\n",
+    "- 2023.04.12.수\n",
+    "- 시작 11:38\n",
+    "- 끝 12:17\n",
+    "- 핵심\n",
+    "    - 1차원 좌표 상에서 dfs or bfs 수행"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ef2fd7f7-672a-4dcb-9fb5-5dde3ce8c57d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def solution(n, computers):\n",
+    "    \n",
+    "    graph = [[] for _ in range(n)]\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if i == j:\n",
+    "                continue\n",
+    "            if computers[i][j] == 1:\n",
+    "                graph[i].append(j)\n",
+    "    \n",
+    "    stack = []\n",
+    "    visited = [False] * n\n",
+    "    idx = 0\n",
+    "    answer = n\n",
+    "    \n",
+    "    while stack or idx < n:\n",
+    "        if stack:\n",
+    "            x = stack.pop()\n",
+    "        else:\n",
+    "            stack.extend(graph[idx])\n",
+    "            visited[idx] = True\n",
+    "            idx += 1\n",
+    "            continue\n",
+    "        \n",
+    "        if visited[x] == False:\n",
+    "            visited[x] = True\n",
+    "            stack.extend(graph[x])\n",
+    "            answer -= 1\n",
+    "            \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "eac83e70-5a10-4957-984e-06cbd18d2b3d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def solution(n, computers):\n",
+    "    \n",
+    "    graph = [[] for _ in range(n)]\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if i == j:\n",
+    "                continue\n",
+    "            if computers[i][j] == 1:\n",
+    "                graph[i].append(j)\n",
+    "    \n",
+    "    stack = []\n",
+    "    visited = [False] * n\n",
+    "    idx = 0\n",
+    "    answer = n\n",
+    "    \n",
+    "    while stack or idx < n:\n",
+    "        if stack:\n",
+    "            x = stack.pop()\n",
+    "        else:\n",
+    "            if graph[idx] == True:\n",
+    "                continue\n",
+    "            stack.extend(graph[idx])\n",
+    "            visited[idx] = True\n",
+    "            idx += 1\n",
+    "            continue\n",
+    "        \n",
+    "        if visited[x] == False:\n",
+    "            visited[x] = True\n",
+    "            stack.extend(graph[x])\n",
+    "            answer -= 1\n",
+    "            \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e127d3e0-fec4-4768-9cac-db0844f80304",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 3\n",
+    "computers = [[1, 1, 0], [1, 1, 0], [0, 0, 1]]\n",
+    "#result = 2\n",
+    "\n",
+    "solution(n, computers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "25f16e2e-9d79-474d-a711-fb86ab1898ad",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 3\n",
+    "computers = [[1, 1, 0], [1, 1, 1], [0, 1, 1]]\n",
+    "#result = 1\n",
+    "\n",
+    "solution(n, computers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e0f6d45-1a20-4c32-86cc-9f92a717ecc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 모범답안\n",
+    "\n",
+    "def visit(k, graph, visited):\n",
+    "    visited[k] = 1\n",
+    "    for i in range(len(graph[k])):\n",
+    "        if visited[i] == 0 and graph[k][i] == 1:\n",
+    "            visit(i, graph, visited)\n",
+    "\n",
+    "def solution(n, computers):\n",
+    "\n",
+    "    visited = [0] * n\n",
+    "\n",
+    "    answer = 0\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        if visited[i] == 0:\n",
+    "            visit(i, computers, visited)\n",
+    "            answer += 1\n",
+    "        if 0 not in visited:\n",
+    "            break\n",
+    "\n",
+    "    return answer"
    ]
   }
  ],
