--- a/01 프로그래머스/08_프로그래머스_고득점kit_DFSBFS.ipynb
+++ b/01 프로그래머스/08_프로그래머스_고득점kit_DFSBFS.ipynb
@@ -188,6 +188,7 @@
    "cell_type": "markdown",
    "id": "1860a1ff-f642-423e-bf06-d63fc9f74484",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -371,6 +372,159 @@
     "            break\n",
     "\n",
     "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d211da3-9517-4c34-ae23-92848f09718b",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 3. 게임 맵 최단거리\n",
+    "\n",
+    "- https://school.programmers.co.kr/learn/courses/30/lessons/1844\n",
+    "- level 2\n",
+    "- 2023.04.13.목\n",
+    "- 시작 13:15\n",
+    "- 끝 14:08\n",
+    "- 핵심\n",
+    "    - bfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "cd5ac377-5898-488f-b4a7-aae6e6c2902e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "def solution(maps):\n",
+    "    \n",
+    "    # visited = [[0] * n for _ in range(m)]\n",
+    "    maxx = len(maps[0])-1\n",
+    "    maxy = len(maps)-1\n",
+    "    \n",
+    "    # 상하좌우\n",
+    "    dx = [0,0,-1,1]\n",
+    "    dy = [-1,1,0,0]\n",
+    "    \n",
+    "    queue = deque([[0,0]])\n",
+    "    \n",
+    "    while queue:\n",
+    "        x,y = queue.popleft()\n",
+    "        \n",
+    "        for i in range(4):\n",
+    "            nx = x + dx[i]\n",
+    "            ny = y + dy[i]\n",
+    "            \n",
+    "            if nx < 0 or nx > maxx or ny < 0 or ny > maxy or maps[ny][nx] == 0:\n",
+    "                continue\n",
+    "            elif maps[ny][nx] == 1:\n",
+    "                if (nx,ny) == (0,0):\n",
+    "                    continue\n",
+    "                maps[ny][nx] = maps[y][x] + 1\n",
+    "                queue.append([nx,ny])\n",
+    "            elif maps[ny][nx] > maps[y][x]+1:\n",
+    "                maps[ny][nx] = min(maps[ny][nx], maps[y][x]+1)\n",
+    "                queue.append([nx,ny])\n",
+    "    \n",
+    "    if maps[maxy][maxx] == 1:\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return maps[maxy][maxx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "a6f1a061-be54-4e2f-9a3b-e8844833828e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "maps = [[1,0,1,1,1],[1,0,1,0,1],[1,0,1,1,1],[1,1,1,0,1],[0,0,0,0,1]]\n",
+    "#result = 11\n",
+    "\n",
+    "solution(maps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "4db1f97e-27df-4f04-a41f-f19b15960799",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "maps = [[1,0,1,1,1],[1,0,1,0,1],[1,0,1,0,1],[1,1,1,0,1],[0,0,0,0,1]]\n",
+    "#result = 11\n",
+    "\n",
+    "solution(maps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb4d24f7-7b5e-49dd-b8a2-1f6f61a50b1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 타인 답안\n",
+    "\n",
+    "from collections import deque\n",
+    "\n",
+    "def solution(maps):\n",
+    "    x_move = [1, 0, -1, 0]\n",
+    "    y_move = [0, 1, 0, -1]\n",
+    "\n",
+    "    x_h, y_h = (len(maps[0]), len(maps))\n",
+    "    queue = deque([(0, 0, 1)])\n",
+    "\n",
+    "    while queue:\n",
+    "        x, y, d = queue.popleft()\n",
+    "\n",
+    "        for i in range(4):\n",
+    "            nx = x + x_move[i]\n",
+    "            ny = y + y_move[i]\n",
+    "\n",
+    "            if nx > -1 and ny > -1 and nx < x_h and ny < y_h:\n",
+    "                if maps[ny][nx] == 1 or maps[ny][nx] > d + 1:\n",
+    "                    maps[ny][nx] = d + 1\n",
+    "                    if nx == x_h - 1 and ny == y_h - 1:\n",
+    "                        return d + 1\n",
+    "\n",
+    "                    queue.append((nx, ny, d + 1))\n",
+    "\n",
+    "    return -1"
    ]
   }
  ],
