solved / lv3 / 단어 변환 / 20230414금

--- a/01 프로그래머스/08_프로그래머스_고득점kit_DFSBFS.ipynb
+++ b/01 프로그래머스/08_프로그래머스_고득점kit_DFSBFS.ipynb
@@ -378,6 +378,7 @@
    "cell_type": "markdown",
    "id": "4d211da3-9517-4c34-ae23-92848f09718b",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -526,6 +527,117 @@
     "\n",
     "    return -1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a37a3c9b-c184-4050-a8da-4b380c3e3f90",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 4. 단어 변환\n",
+    "\n",
+    "- https://school.programmers.co.kr/learn/courses/30/lessons/43163\n",
+    "- level 3\n",
+    "- 2023.04.14.금\n",
+    "- 시작 10:35\n",
+    "- 끝 11:26\n",
+    "- 실패\n",
+    "    - 어떤 식으로 접근해야 할지 감이 안옴\n",
+    "        - "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec398b57-fc96-46a5-a2fc-c83b0f940a8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(begin, target, words):\n",
+    "    \n",
+    "    if target not in words:\n",
+    "        return 0\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8448efb8-13eb-43d2-8276-c188d4141b56",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "### https://velog.io/@op032/프로그래머스-단어-변환python\n",
+    "### 타인 코드 공유본 후 일정 시간 지난 후에 재시도\n",
+    "\n",
+    "from collections import deque\n",
+    "\n",
+    "def solution(begin, target, words):\n",
+    "    \n",
+    "    if target not in words:\n",
+    "        return 0\n",
+    "    \n",
+    "    visited = [0] * len(words)\n",
+    "    q = deque([[begin, 0]])\n",
+    "    \n",
+    "    while q:\n",
+    "        word,cnt = q.popleft()\n",
+    "        \n",
+    "        if word == target:\n",
+    "            return cnt\n",
+    "        \n",
+    "        for i in range(len(words)):\n",
+    "            if visited[i] == 0:\n",
+    "                temp_cnt = 0\n",
+    "                for j in range(len(word)):\n",
+    "                    if word[j] != words[i][j]:\n",
+    "                        temp_cnt += 1\n",
+    "                        \n",
+    "                if temp_cnt == 1:\n",
+    "                    q.append([words[i], cnt+1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "dbe3e593-3524-4b88-90dc-eee6e16cbd98",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "begin = 'hit'\n",
+    "target = 'cog'\n",
+    "words = [\"hot\", \"dot\", \"dog\", \"lot\", \"log\", \"cog\"]\n",
+    "# result = 4\n",
+    "\n",
+    "solution(begin, target, words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea5c7238-fb55-4181-945e-4ad8fac36d6b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
